fix overflow issues

--- a/contents/sidebar.css
+++ b/contents/sidebar.css
@@ -7,9 +7,10 @@
 	overflow-y: scroll;
 
 	display: flex;
-	align-items: center;
-	justify-content: center;
+	align-items: flex-start;
+	justify-content: flex-start;
 	flex-direction: column;
+	padding: 24px 0;
 
 	transition: all 0.5s ease;
 }
